--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                                 <h3 class="pricing-card-title">
                                     Varint1 <span class="pricing-card-person">70 person</span>
                                 </h3>
-                                <p class="pricing-person tabs__cena tabs__cena--active pricing-card-price" id="tab-1">73,40  <span>руб</span></p>
-                                <p class="pricing-banket tabs__cena pricing-card-price" id="tab-2">5 140,20 <span>руб</span></p>
+                                <p class="pricing-person tabs__cena tabs__cena--active pricing-card-price" style="display: none">73,40  <span>руб</span></p>
+                                <p class="pricing-banket tabs__cena pricing-card-price">5 140,20 <span>руб</span></p>
                             </div>
                             <div class=" pricing-card-horizontal-bottom">
                                 <div class="button-group">
