--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                                 <h3 class="pricing-card-title">
                                     Varint1 <span class="pricing-card-person">70 person</span>
                                 </h3>
-                                <p class="pricing-person tabs__cena tabs__cena--active pricing-card-price" >73,40  <span>руб</span></p>
-                                <p class="pricing-banket tabs__cena pricing-card-price">5 140,20 <span>руб</span></p>
+                                <p class="pricing-person pricing-card-price" style="display: none">73,40  <span>руб</span></p>
+                                <p class="pricing-banket pricing-card-price">5 140,20 <span>руб</span></p>
                             </div>
                             <div class=" pricing-card-horizontal-bottom">
                                 <div class="button-group">
@@ -603,8 +603,8 @@
                                 <h3 class="pricing-card-title">
                                     Variant2 <span class="pricing-card-person">40 person</span>
                                 </h3>
-                                <p class="pricing-person pricing-card-price" id="tab-1">84,00  <span>руб</span></p>
-                                <p class="pricing-banket pricing-card-price" id="tab-2">3 386,70 <span>руб</span></p>                            
+                                <p class="pricing-person pricing-card-price" style="display: none">84,00  <span>руб</span></p>
+                                <p class="pricing-banket pricing-card-price">3 386,70 <span>руб</span></p>                            
                             </div>
 
                             <div class=" pricing-card-horizontal-bottom">
@@ -1056,8 +1056,8 @@
                                 <h3 class="pricing-card-title">
                                     Вариант3 <span class="pricing-card-person">35 person</span>
                                 </h3>
-                                <p class="pricing-person pricing-card-price" id="tab-1">85,40  <span>руб</span></p>
-                                <p class="pricing-banket pricing-card-price" id="tab-2">2 990,30 <span>руб</span></p>
+                                <p class="pricing-person pricing-card-price" style="display: none">85,40  <span>руб</span></p>
+                                <p class="pricing-banket pricing-card-price" >2 990,30 <span>руб</span></p>
                             </div>
 
                             <div class=" pricing-card-horizontal-bottom">
@@ -1652,8 +1652,8 @@
                                 <h3 class="pricing-card-title">
                                     Вариант4 <span class="pricing-card-person">50 person</span>
                                 </h3>
-                                <p class="pricing-person pricing-card-price" id="tab-1">67,50  <span>руб</span></p>
-                                <p class="pricing-banket pricing-card-price" id="tab-2">3 372,40 <span>руб</span></p>
+                                <p class="pricing-person pricing-card-price"style="display: none">67,50  <span>руб</span></p>
+                                <p class="pricing-banket pricing-card-price">3 372,40 <span>руб</span></p>
                             </div>
 
                             <div class=" pricing-card-horizontal-bottom">
@@ -2235,8 +2235,8 @@
                                 <h3 class="pricing-card-title">
                                     Вариант5 <span class="pricing-card-person">100 person</span>
                                 </h3>
-                                <p class="pricing-person pricing-card-price" id="tab-1">82,20  <span>руб</span></p>
-                                <p class="pricing-banket pricing-card-price" id="tab-2">8 221,90 <span>руб</span></p>
+                                <p class="pricing-person pricing-card-price" style="display: none">82,20  <span>руб</span></p>
+                                <p class="pricing-banket pricing-card-price" >8 221,90 <span>руб</span></p>
                             </div>
 
                             <div class=" pricing-card-horizontal-bottom">
