--- a/index.html
+++ b/index.html
@@ -2934,7 +2934,7 @@
                                         <th colspan="2"><span>Наименование</span></th>
                                         <th><span>Выход гр.</span></th>
                                         <th><span>Кол-во порций</span></th>
-                                        <th><span>Стоимость за порцию</span></th>
+                                        <th><span>Стоимость порции</span></th>
                                         <th><span>Итого</span></th>
                                       </tr>
                                     </thead>
