--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 <nav class="nav">
                     <ul class="nav-list">
-                        <li class="nav-link"><a href="tablepricing.html">Table New</a></li>
+                        <li class="nav-link"><a href="https://serg-by.github.io/tablepricing.html">Table New</a></li>
                         <!-- <li class="nav-link">Link</li>
                         <li class="nav-link">Link</li> -->
                     </ul>
