--- a/tablepricing.html
+++ b/tablepricing.html
@@ -1848,7 +1848,7 @@
     </div>
 </section>
     
-    <script src="/tablepricing.js"></script>
+    <script src="tablepricing.js"></script>
 </body>
 
 </html>
