--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>tablepricing</title>
     <link rel="stylesheet" href="table.css">
     <link rel="stylesheet" href="tablepricing.css">
+    <meta name="yandex-verification" content="6a560ffd08d7e20f" />
 </head>
 
 <body>
