--- a/index2.html
+++ b/index2.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="table.css" />
     <link rel="stylesheet" href="switch.css">
     <link rel="stylesheet" href="mains.css" />
+    <meta name="yandex-verification" content="6a560ffd08d7e20f" />
     <title>PR-site</title>
 </head>
 
